// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app/GitTemporal when changing path prop it should match snapshot (should still be showing commits) 1`] = `
<div
  style={
    Object {
      "height": "calc(100% - 40px)",
      "padding": 20,
      "position": "absolute",
      "width": "calc(100% - 40px)",
    }
  }
>
  <Component
    isSpinning={false}
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "height": "100%",
        }
      }
    >
      <Connect(Header) />
      <div
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
            "flexGrow": 1,
          }
        }
      >
        <Connect(Stats) />
        <div
          style={
            Object {
              "display": "flex",
              "flexDirection": "row",
              "flexGrow": 1,
            }
          }
        >
          <Connect(Authors) />
          <Connect(Commits) />
        </div>
        <Connect(Timeplot) />
      </div>
    </div>
  </Component>
</div>
`;

exports[`app/GitTemporal when rendered with commits and isFetching it should match snapshot (it should show loading indicator) 1`] = `
<div
  style={
    Object {
      "height": "calc(100% - 40px)",
      "padding": 20,
      "position": "absolute",
      "width": "calc(100% - 40px)",
    }
  }
>
  <Component
    isSpinning={true}
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "height": "100%",
        }
      }
    >
      <Connect(Header) />
    </div>
  </Component>
</div>
`;

exports[`app/GitTemporal when rendered with commits and not fetching it should match snapshot (it should be showing commits) 1`] = `
<div
  style={
    Object {
      "height": "calc(100% - 40px)",
      "padding": 20,
      "position": "absolute",
      "width": "calc(100% - 40px)",
    }
  }
>
  <Component
    isSpinning={false}
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "height": "100%",
        }
      }
    >
      <Connect(Header) />
      <div
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
            "flexGrow": 1,
          }
        }
      >
        <Connect(Stats) />
        <div
          style={
            Object {
              "display": "flex",
              "flexDirection": "row",
              "flexGrow": 1,
            }
          }
        >
          <Connect(Authors) />
          <Connect(Commits) />
        </div>
        <Connect(Timeplot) />
      </div>
    </div>
  </Component>
</div>
`;

exports[`app/GitTemporal when rendered without props it should match snapshot (it should be showing empty indicator) 1`] = `
<div
  style={
    Object {
      "height": "calc(100% - 40px)",
      "padding": 20,
      "position": "absolute",
      "width": "calc(100% - 40px)",
    }
  }
>
  <Component>
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "height": "100%",
        }
      }
    >
      <Connect(Header) />
      <h2>
        Empty.
      </h2>
    </div>
  </Component>
</div>
`;
